##Text encoding: utf-8

2007-10-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add seamonkey to mozilla avatars and fix goffice component
	installation path.
	* gcu-unstable.pc.in: removed.
	* gcu.pc.in: removed.

2007-10-23 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac: Fixed AC_CONFIG_FILES and AC_OUTPUT usage.

2007-10-22 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac (GOFFICE_PLUGINS_DIR): Handle option without a given
	value.

2007-10-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/preferences.glade: add a default theme key and use it to
	set the default theme [sr #106032,item #3].
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/preferences.h: ditto.
	* libs/gcp/theme.cc: ditto.
	* libs/gcp/theme.h: ditto.
	* programs/paint/gchempaint.schemas.in: ditto.

2007-10-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomery.cc: fix an infinite loop condition.
	* libs/gcp/view.cc: do not change the default element when changing
	the nature of an atom using the keyboard [sr #106032,item #2].
	* libs/gcu/formula.cc: support non ambiguous residues.
	* libs/gcu/formula.h: ditto.
	* libs/gcu/residue.cc: ditto.
	* libs/gcu/residue.h: ditto.
	* plugins/paint/residues/residues-dlg.cc: ditto.

2007-10-17 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* libs/Makefile.am: Added MAINTAINERCLEANFILES to remove Makefile.in.
	* libs/canvas/Makefile.am: Ditto.
	* libs/gcp/Makefile.am: Ditto.

2007-10-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* Makefile.am (MAINTAINERCLEANFILES): Remove gnome-doc-utils.make on
	maintainer-clean.
	(DISTCHECK_CONFIGURE_FLAGS): Disable schemas installation for
	distcheck target.
	* configure.ac: Fix broken output indentation.
	* gcu.pc.in: Added URL field. Fixed goffice package name.
	* gcu-unstable.pc.in: Ditto.
	* docs/man/Makefile.am: Formatting changes. Backported the better
	version of the 0.8 series. Added new manpages and their sources (all